lustre/lfsck/lfsck_engine.c
@@ -294,6 +294,9 @@ static int lfsck_load_stripe_lmv(const struct lu_env *env,
 	LASSERT(lfsck->li_obj_dir == NULL);
 	LASSERT(lfsck->li_lmv == NULL);
 
+	if (unlikely(!dt_try_as_dir(env, obj)))
+		RETURN(-ENOTDIR);
+
 	rc = lfsck_read_stripe_lmv(env, obj, lmv);
 	if (rc == -ENODATA) {
 		lfsck->li_obj_dir = lfsck_object_get(obj);
